SKIE/acceptance-tests/functional/src/test/resources/tests/functions/deprecation/error/global/property/A.kt
package `tests`.`functions`.`deprecation`.`error`.`global`.`property`

@Deprecated("Some error", level = DeprecationLevel.ERROR)
var foo: Int = 0
